# BetterPTT

./: CMakeLists.txt  README.md
src/: input.h  library.cpp  plugin.cpp  plugin.h
